update payment getway moyasar

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -118,7 +118,7 @@
     "Please provide a valid donation quantity" : "يرجى تقديم كمية صالحة للتبرع",
     "Gifting categories" : "فئات الاهداء",
     "Thank you for contacting us. We will contact you as soon as possible" : "شكرا لتواصلكم معنا سوف يتم التواصل معك في اقرب وقت",
-    "Thank you for your donation through Nama" : "شكرا لتبرعكم من خلال يد بيد",
+    "Thank you for your donation through Nama" : "شكرا لتبرعكم من خلال اكرام ",
     "Your request has been successfully received and is being reviewed" : "تم استلام طلبك بنجاح وجاري مراجعته",
     "Please enter all fields" : "الرجاء إدخال كافة الحقول",
     "Please save this card first" : "يرجى حفظ هذه البطاقة أولا",
